[metadata]
name = cdot
version = attr: cdot.__version__
author = Dave Lawrence
author_email = davmlaw@gmail.com
description = Transcripts for HGVS libraries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SACGF/cdot
project_urls =
    Bug Tracker = https://github.com/SACGF/cdot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.8
install_requires =
    requests
    intervaltree
    bioutils

[options.packages.find]
where =
